examples/test/testpolicy10891.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10891
  namespace: namespace173
spec:
  podSelector:
    matchLabels:
      key35: value35
      key43: value13
      key41: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value29
          key48: value8
          key33: value32
      podSelector:
        matchLabels:
          key17: value25
          key44: value28
          key45: value11
